plugins {
    id 'java'
    id 'war'
    id 'antlr'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'
    id 'de.undercouch.download' version '5.5.+' apply false
}

group = 'com.ampznetwork'
description = 'Herobrine'
version = '0'

[project(':LibMod:api'),
 project(':ChatMod:api')].each {
    apply from: 'ModSuite/gradle/scripts/setup/global.gradle'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

allprojects*.repositories {
    maven {
        name = 'comroid'
        url = 'https://maven.comroid.org'
    }
    maven {
        name = "spigotmc-repo"
        url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
    }
    maven {
        name = 'PAPI'
        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
    }
    mavenLocal()
    mavenCentral()
}

dependencies {
    // core function
    implementation project(':japi')
    implementation project(':ChatMod:api')

    // antlr
    antlr "org.antlr:antlr4:4.+"

    // minecraft
    implementation 'org.spigotmc:spigot-api:1.20-R0.1-SNAPSHOT'

    // discord
    implementation 'net.dv8tion:JDA:6.+'
    implementation 'club.minnced:discord-webhooks:+'
    implementation 'com.kcthota:emoji4j:+'

    // rabbitmq
    implementation 'com.rabbitmq:amqp-client:+'

    // dev
    //developmentOnly 'org.springframework.boot:spring-boot-devtools' <- doesnt work fsr with this loader config
    developmentOnly 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // database
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.hibernate:hibernate-core:6.6.26.Final' // version bump
    implementation 'org.mariadb.jdbc:mariadb-java-client'

    // website
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // security
    implementation 'org.springframework.session:spring-session-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

    // utility
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    //providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.amqp:spring-rabbit-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.easymock:easymock:+'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

generateGrammarSource {
    arguments += ["-long-messages",
                  "-visitor",
                  "-package", "com.ampznetwork.herobrine.antlr"]

    doLast {
        mkdir("$rootDir/build/generated-src/antlr/main/com/ampznetwork/herobrine/antlr/")
        fileTree("$rootDir/build/generated-src/antlr/main")
                .matching { include '*.java' }
                .forEach { f ->
                    def path = "$rootDir/build/generated-src/antlr/main/com/ampznetwork/herobrine/antlr/${f.name}"
                    if (file(path).exists())
                        file(path).delete()
                    f.renameTo(path)
                }
    }
}

sourceSets {
    main {
        java {
            srcDirs += file("$rootDir/build/generated-src/antlr/main")
        }
    }
}

tasks.named('test') {
    //outputs.dir snippetsDir
    useJUnitPlatform()
}

evaluationDependsOnChildren()
